pynestml/generated_old/PyNestMLParser.py
# Generated from PyNestMLParser.g4 by ANTLR 4.7.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class PyNestMLParser ( Parser ):

    grammarFileName = "PyNestMLParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"'end'", u"'integer'", 
                     u"'real'", u"'string'", u"'boolean'", u"'void'", u"'function'", 
                     u"'return'", u"'if'", u"'elif'", u"'else'", u"'for'", 
                     u"'while'", u"'in'", u"'step'", u"'inf'", u"'and'", 
                     u"'or'", u"'recordable'", u"'shape'", u"'neuron'", 
                     u"'state'", u"'parameters'", u"'internals'", u"'initial_values'", 
                     u"'update'", u"'equations'", u"'input'", u"'output'", 
                     u"'current'", u"'spike'", u"'inhibitory'", u"'excitatory'", 
                     u"'...'", u"'('", u"')'", u"'+'", u"'~'", u"'|'", u"'^'", 
                     u"'&'", u"'['", u"'<-'", u"']'", u"'[['", u"']]'", 
                     u"'<<'", u"'>>'", u"'<'", u"'>'", u"'<='", u"'+='", 
                     u"'-='", u"'*='", u"'/='", u"'=='", u"'!='", u"'<>'", 
                     u"'>='", u"','", u"'-'", u"'='", u"'*'", u"'**'", u"'/'", 
                     u"'%'", u"'?'", u"':'", u"';'", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"'''" ]

    symbolicNames = [ u"<INVALID>", u"SL_COMMENT", u"ML_COMMENT", u"NEWLINE", 
                      u"WS", u"LINE_ESCAPE", u"END_KEYWORD", u"INTEGER_KEYWORD", 
                      u"REAL_KEYWORD", u"STRING_KEYWORD", u"BOOLEAN_KEYWORD", 
                      u"VOID_KEYWORD", u"FUNCTION_KEYWORD", u"RETURN_KEYWORD", 
                      u"IF_KEYWORD", u"ELIF_KEYWORD", u"ELSE_KEYWORD", u"FOR_KEYWORD", 
                      u"WHILE_KEYWORD", u"IN_KEYWORD", u"STEP_KEYWORD", 
                      u"INF_KEYWORD", u"AND_KEYWORD", u"OR_KEYWORD", u"RECORDABLE_KEYWORD", 
                      u"SHAPE_KEYWORD", u"NEURON_KEYWORD", u"STATE_KEYWORD", 
                      u"PARAMETERS_KEYWORD", u"INTERNALS_KEYWORD", u"INITIAL_VALUES_KEYWORD", 
                      u"UPDATE_KEYWORD", u"EQUATIONS_KEYWORD", u"INPUT_KEYWORD", 
                      u"OUTPUT_KEYWORD", u"CURRENT_KEYWORD", u"SPIKE_KEYWORD", 
                      u"INHIBITORY_KEYWORD", u"EXCITATORY_KEYWORD", u"ELLIPSIS", 
                      u"LEFT_PAREN", u"RIGHT_PAREN", u"PLUS", u"TILDE", 
                      u"PIPE", u"CARET", u"AMPERSAND", u"LEFT_SQUARE_BRACKET", 
                      u"LEFT_ANGLE_MINUS", u"RIGHT_SQUARE_BRACKET", u"LEFT_LEFT_SQUARE", 
                      u"RIGHT_RIGHT_SQUARE", u"LEFT_LEFT_ANGLE", u"RIGHT_RIGHT_ANGLE", 
                      u"LEFT_ANGLE", u"RIGHT_ANGLE", u"LEFT_ANGLE_EQUALS", 
                      u"PLUS_EQUALS", u"MINUS_EQUALS", u"STAR_EQUALS", u"FORWARD_SLASH_EQUALS", 
                      u"EQUALS_EQUALS", u"EXCLAMATION_EQUALS", u"LEFT_ANGLE_RIGHT_ANGLE", 
                      u"RIGHT_ANGLE_EQUALS", u"COMMA", u"MINUS", u"EQUALS", 
                      u"STAR", u"STAR_STAR", u"FORWARD_SLASH", u"PERCENT", 
                      u"QUESTION", u"COLON", u"SEMICOLON", u"BOOLEAN_LITERAL", 
                      u"STRING_LITERAL", u"NAME", u"INTEGER", u"DIFFERENTIAL_ORDER", 
                      u"FLOAT" ]

    RULE_dataType = 0
    RULE_unitType = 1
    RULE_expression = 2
    RULE_simpleExpression = 3
    RULE_unaryOperator = 4
    RULE_bitOperator = 5
    RULE_comparisonOperator = 6
    RULE_logicalOperator = 7
    RULE_variable = 8
    RULE_functionCall = 9
    RULE_odeFunction = 10
    RULE_odeEquation = 11
    RULE_odeShape = 12
    RULE_block = 13
    RULE_stmt = 14
    RULE_compoundStmt = 15
    RULE_smallStmt = 16
    RULE_assignment = 17
    RULE_declaration = 18
    RULE_returnStmt = 19
    RULE_ifStmt = 20
    RULE_ifClause = 21
    RULE_elifClause = 22
    RULE_elseClause = 23
    RULE_forStmt = 24
    RULE_whileStmt = 25
    RULE_nestMLCompilationUnit = 26
    RULE_neuron = 27
    RULE_body = 28
    RULE_blockWithVariables = 29
    RULE_updateBlock = 30
    RULE_equationsBlock = 31
    RULE_inputBlock = 32
    RULE_inputLine = 33
    RULE_inputType = 34
    RULE_outputBlock = 35
    RULE_function = 36
    RULE_parameter = 37

    ruleNames =  [ u"dataType", u"unitType", u"expression", u"simpleExpression", 
                   u"unaryOperator", u"bitOperator", u"comparisonOperator", 
                   u"logicalOperator", u"variable", u"functionCall", u"odeFunction", 
                   u"odeEquation", u"odeShape", u"block", u"stmt", u"compoundStmt", 
                   u"smallStmt", u"assignment", u"declaration", u"returnStmt", 
                   u"ifStmt", u"ifClause", u"elifClause", u"elseClause", 
                   u"forStmt", u"whileStmt", u"nestMLCompilationUnit", u"neuron", 
                   u"body", u"blockWithVariables", u"updateBlock", u"equationsBlock", 
                   u"inputBlock", u"inputLine", u"inputType", u"outputBlock", 
                   u"function", u"parameter" ]

    EOF = Token.EOF
    SL_COMMENT=1
    ML_COMMENT=2
    NEWLINE=3
    WS=4
    LINE_ESCAPE=5
    END_KEYWORD=6
    INTEGER_KEYWORD=7
    REAL_KEYWORD=8
    STRING_KEYWORD=9
    BOOLEAN_KEYWORD=10
    VOID_KEYWORD=11
    FUNCTION_KEYWORD=12
    RETURN_KEYWORD=13
    IF_KEYWORD=14
    ELIF_KEYWORD=15
    ELSE_KEYWORD=16
    FOR_KEYWORD=17
    WHILE_KEYWORD=18
    IN_KEYWORD=19
    STEP_KEYWORD=20
    INF_KEYWORD=21
    AND_KEYWORD=22
    OR_KEYWORD=23
    RECORDABLE_KEYWORD=24
    SHAPE_KEYWORD=25
    NEURON_KEYWORD=26
    STATE_KEYWORD=27
    PARAMETERS_KEYWORD=28
    INTERNALS_KEYWORD=29
    INITIAL_VALUES_KEYWORD=30
    UPDATE_KEYWORD=31
    EQUATIONS_KEYWORD=32
    INPUT_KEYWORD=33
    OUTPUT_KEYWORD=34
    CURRENT_KEYWORD=35
    SPIKE_KEYWORD=36
    INHIBITORY_KEYWORD=37
    EXCITATORY_KEYWORD=38
    ELLIPSIS=39
    LEFT_PAREN=40
    RIGHT_PAREN=41
    PLUS=42
    TILDE=43
    PIPE=44
    CARET=45
    AMPERSAND=46
    LEFT_SQUARE_BRACKET=47
    LEFT_ANGLE_MINUS=48
    RIGHT_SQUARE_BRACKET=49
    LEFT_LEFT_SQUARE=50
    RIGHT_RIGHT_SQUARE=51
    LEFT_LEFT_ANGLE=52
    RIGHT_RIGHT_ANGLE=53
    LEFT_ANGLE=54
    RIGHT_ANGLE=55
    LEFT_ANGLE_EQUALS=56
    PLUS_EQUALS=57
    MINUS_EQUALS=58
    STAR_EQUALS=59
    FORWARD_SLASH_EQUALS=60
    EQUALS_EQUALS=61
    EXCLAMATION_EQUALS=62
    LEFT_ANGLE_RIGHT_ANGLE=63
    RIGHT_ANGLE_EQUALS=64
    COMMA=65
    MINUS=66
    EQUALS=67
    STAR=68
    STAR_STAR=69
    FORWARD_SLASH=70
    PERCENT=71
    QUESTION=72
    COLON=73
    SEMICOLON=74
    BOOLEAN_LITERAL=75
    STRING_LITERAL=76
    NAME=77
    INTEGER=78
    DIFFERENTIAL_ORDER=79
    FLOAT=80

    def __init__(self, input, output=sys.stdout):
        super(PyNestMLParser, self).__init__(input, output=output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class DataTypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PyNestMLParser.DataTypeContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.isInt = None # Token
            self.isReal = None # Token
            self.isString = None # Token
            self.isBool = None # Token
            self.isVoid = None # Token
            self.unit = None # UnitTypeContext

        def INTEGER_KEYWORD(self):
            return self.getToken(PyNestMLParser.INTEGER_KEYWORD, 0)

        def REAL_KEYWORD(self):
            return self.getToken(PyNestMLParser.REAL_KEYWORD, 0)

        def STRING_KEYWORD(self):
            return self.getToken(PyNestMLParser.STRING_KEYWORD, 0)

        def BOOLEAN_KEYWORD(self):
            return self.getToken(PyNestMLParser.BOOLEAN_KEYWORD, 0)

        def VOID_KEYWORD(self):
            return self.getToken(PyNestMLParser.VOID_KEYWORD, 0)

        def unitType(self):
            return self.getTypedRuleContext(PyNestMLParser.UnitTypeContext,0)


        def getRuleIndex(self):
            return PyNestMLParser.RULE_dataType

        def accept(self, visitor):
            if hasattr(visitor, "visitDataType"):
                return visitor.visitDataType(self)
            else:
                return visitor.visitChildren(self)




    def dataType(self):

        localctx = PyNestMLParser.DataTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_dataType)
        try:
            self.state = 82
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PyNestMLParser.INTEGER_KEYWORD]:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                localctx.isInt = self.match(PyNestMLParser.INTEGER_KEYWORD)
                pass
            elif token in [PyNestMLParser.REAL_KEYWORD]:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                localctx.isReal = self.match(PyNestMLParser.REAL_KEYWORD)
                pass
            elif token in [PyNestMLParser.STRING_KEYWORD]:
                self.enterOuterAlt(localctx, 3)
                self.state = 78
                localctx.isString = self.match(PyNestMLParser.STRING_KEYWORD)
                pass
            elif token in [PyNestMLParser.BOOLEAN_KEYWORD]:
                self.enterOuterAlt(localctx, 4)
                self.state = 79
                localctx.isBool = self.match(PyNestMLParser.BOOLEAN_KEYWORD)
                pass
            elif token in [PyNestMLParser.VOID_KEYWORD]:
                self.enterOuterAlt(localctx, 5)
                self.state = 80
                localctx.isVoid = self.match(PyNestMLParser.VOID_KEYWORD)
                pass
            elif token in [PyNestMLParser.LEFT_PAREN, PyNestMLParser.NAME, PyNestMLParser.INTEGER]:
                self.enterOuterAlt(localctx, 6)
                self.state = 81
                localctx.unit = self.unitType(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UnitTypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PyNestMLParser.UnitTypeContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.base = None # UnitTypeContext
            self.left = None # UnitTypeContext
            self.leftParentheses = None # Token
            self.compoundUnit = None # UnitTypeContext
            self.rightParentheses = None # Token
            self.unitlessLiteral = None # Token
            self.divOp = None # Token
            self.right = None # UnitTypeContext
            self.unit = None # Token
            self.timesOp = None # Token
            self.powOp = None # Token
            self.exponent = None # Token

        def LEFT_PAREN(self):
            return self.getToken(PyNestMLParser.LEFT_PAREN, 0)

        def unitType(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(PyNestMLParser.UnitTypeContext)
            else:
                return self.getTypedRuleContext(PyNestMLParser.UnitTypeContext,i)


        def RIGHT_PAREN(self):
            return self.getToken(PyNestMLParser.RIGHT_PAREN, 0)

        def INTEGER(self):
            return self.getToken(PyNestMLParser.INTEGER, 0)

        def FORWARD_SLASH(self):
            return self.getToken(PyNestMLParser.FORWARD_SLASH, 0)

        def NAME(self):
            return self.getToken(PyNestMLParser.NAME, 0)

        def STAR(self):
            return self.getToken(PyNestMLParser.STAR, 0)

        def STAR_STAR(self):
            return self.getToken(PyNestMLParser.STAR_STAR, 0)

        def getRuleIndex(self):
            return PyNestMLParser.RULE_unitType

        def accept(self, visitor):
            if hasattr(visitor, "visitUnitType"):
                return visitor.visitUnitType(self)
            else:
                return visitor.visitChildren(self)



    def unitType(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PyNestMLParser.UnitTypeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_unitType, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PyNestMLParser.LEFT_PAREN]:
                self.state = 85
                localctx.leftParentheses = self.match(PyNestMLParser.LEFT_PAREN)
                self.state = 86
                localctx.compoundUnit = self.unitType(0)
                self.state = 87
                localctx.rightParentheses = self.match(PyNestMLParser.RIGHT_PAREN)
                pass
            elif token in [PyNestMLParser.INTEGER]:
                self.state = 89
                localctx.unitlessLiteral = self.match(PyNestMLParser.INTEGER)
                self.state = 90
                localctx.divOp = self.match(PyNestMLParser.FORWARD_SLASH)
                self.state = 91
                localctx.right = self.unitType(2)
                pass
            elif token in [PyNestMLParser.NAME]:
                self.state = 92
                localctx.unit = self.match(PyNestMLParser.NAME)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 106
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 104
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = PyNestMLParser.UnitTypeContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_unitType)
                        self.state = 95
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 98
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [PyNestMLParser.STAR]:
                            self.state = 96
                            localctx.timesOp = self.match(PyNestMLParser.STAR)
                            pass
                        elif token in [PyNestMLParser.FORWARD_SLASH]:
                            self.state = 97
                            localctx.divOp = self.match(PyNestMLParser.FORWARD_SLASH)
                            pass
                        else:
                            raise NoViableAltException(self)

                        self.state = 100
                        localctx.right = self.unitType(4)
                        pass

                    elif la_ == 2:
                        localctx = PyNestMLParser.UnitTypeContext(self, _parentctx, _parentState)
                        localctx.base = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_unitType)
                        self.state = 101
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 102
                        localctx.powOp = self.match(PyNestMLParser.STAR_STAR)
                        self.state = 103
                        localctx.exponent = self.match(PyNestMLParser.INTEGER)
                        pass

             
                self.state = 108
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PyNestMLParser.ExpressionContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.left = None # ExpressionContext
            self.condition = None # ExpressionContext
            self.leftParentheses = None # Token
            self.term = None # ExpressionContext
            self.rightParentheses = None # Token
            self.logicalNot = None # Token
            self.powOp = None # Token
            self.right = None # ExpressionContext
            self.timesOp = None # Token
            self.divOp = None # Token
            self.moduloOp = None # Token
            self.plusOp = None # Token
            self.minusOp = None # Token
            self.ifTrue = None # ExpressionContext
            self.ifNot = None # ExpressionContext

        def LEFT_PAREN(self):
            return self.getToken(PyNestMLParser.LEFT_PAREN, 0)

        def expression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(PyNestMLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PyNestMLParser.ExpressionContext,i)


        def RIGHT_PAREN(self):
            return self.getToken(PyNestMLParser.RIGHT_PAREN, 0)

        def unaryOperator(self):
            return self.getTypedRuleContext(PyNestMLParser.UnaryOperatorContext,0)


        def PERCENT(self):
            return self.getToken(PyNestMLParser.PERCENT, 0)

        def simpleExpression(self):
            return self.getTypedRuleContext(PyNestMLParser.SimpleExpressionContext,0)


        def STAR_STAR(self):
            return self.getToken(PyNestMLParser.STAR_STAR, 0)

        def STAR(self):
            return self.getToken(PyNestMLParser.STAR, 0)

        def FORWARD_SLASH(self):
            return self.getToken(PyNestMLParser.FORWARD_SLASH, 0)

        def PLUS(self):
            return self.getToken(PyNestMLParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(PyNestMLParser.MINUS, 0)

        def bitOperator(self):
            return self.getTypedRuleContext(PyNestMLParser.BitOperatorContext,0)


        def comparisonOperator(self):
            return self.getTypedRuleContext(PyNestMLParser.ComparisonOperatorContext,0)


        def logicalOperator(self):
            return self.getTypedRuleContext(PyNestMLParser.LogicalOperatorContext,0)


        def QUESTION(self):
            return self.getToken(PyNestMLParser.QUESTION, 0)

        def COLON(self):
            return self.getToken(PyNestMLParser.COLON, 0)

        def getRuleIndex(self):
            return PyNestMLParser.RULE_expression

        def accept(self, visitor):
            if hasattr(visitor, "visitExpression"):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PyNestMLParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PyNestMLParser.LEFT_PAREN]:
                self.state = 110
                localctx.leftParentheses = self.match(PyNestMLParser.LEFT_PAREN)
                self.state = 111
                localctx.term = self.expression(0)
                self.state = 112
                localctx.rightParentheses = self.match(PyNestMLParser.RIGHT_PAREN)
                pass
            elif token in [PyNestMLParser.PLUS, PyNestMLParser.TILDE, PyNestMLParser.MINUS]:
                self.state = 114
                self.unaryOperator()
                self.state = 115
                localctx.term = self.expression(9)
                pass
            elif token in [PyNestMLParser.PERCENT]:
                self.state = 117
                localctx.logicalNot = self.match(PyNestMLParser.PERCENT)
                self.state = 118
                localctx.term = self.expression(4)
                pass
            elif token in [PyNestMLParser.INF_KEYWORD, PyNestMLParser.BOOLEAN_LITERAL, PyNestMLParser.STRING_LITERAL, PyNestMLParser.NAME, PyNestMLParser.INTEGER, PyNestMLParser.FLOAT]:
                self.state = 119
                self.simpleExpression()
                pass
            else:
                raise NoViableAltException(self)
